--- a/HulluKyla/Pages/MokkiListaPage.xaml
+++ b/HulluKyla/Pages/MokkiListaPage.xaml
@@ -27,26 +27,23 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <VerticalStackLayout Spacing="0">
-                            <Label Text="{Binding MokkiNimi}" FontSize="14" FontAttributes="Bold" HeightRequest="30"/>
-                            <Label Text="{Binding Katuosoite, StringFormat='Osoite: {0}'}" FontSize="14"/>
-                            <Label Text="{Binding Postinro, StringFormat='Postinumero: {0}'}" FontSize="14"/>
-                            <Label Text="{Binding HenkiloMaara, StringFormat='Henkilömäärä: {0}'}" FontSize="14" HeightRequest="70"/>
+                            <Label Text="{Binding MokkiNimi}" FontAttributes="Bold" HeightRequest="30"/>
+                            <Label Text="{Binding Katuosoite, StringFormat='Osoite: {0}'}"/>
+                            <Label Text="{Binding Postinro, StringFormat='Postinumero: {0}'}"/>
+                            <Label Text="{Binding HenkiloMaara, StringFormat='Henkilömäärä: {0}'}" HeightRequest="70"/>
                         </VerticalStackLayout>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
         </Grid>
 
-
         <!-- Välibuttonit -->
-
         <VerticalStackLayout Spacing="10" Grid.Column="1" Grid.Row="1" VerticalOptions="Center" HorizontalOptions="Center">
             <Button Text="Tallenna mökki" Clicked="TallennaClicked" HeightRequest="50" />
             <Button Text="Poista mökki" Clicked="PoistaClicked" HeightRequest="50" />
         </VerticalStackLayout>
 
         <!-- Entryt -->
-
         <VerticalStackLayout Spacing="10" Grid.Column="2" Grid.Row="1" VerticalOptions="Center" HorizontalOptions="Fill">
             <Entry x:Name="MokkiNimiEntry" Placeholder="Mökin nimi..." />
             <Entry x:Name="KatuosoiteEntry" Placeholder="Katuosoite..." />
@@ -86,6 +83,5 @@
             Clicked="Navigoi_Clicked"
             CommandParameter="UusiMokkiPage" />
         </StackLayout>
-
     </Grid>
 </ContentPage>
