--- a/HulluKyla/Pages/UusiVarausPage.xaml
+++ b/HulluKyla/Pages/UusiVarausPage.xaml
@@ -4,29 +4,117 @@
              x:Class="HulluKyla.Pages.UusiVarausPage"
              Title="UusiVarausPage">
 
-    <Grid Padding="20"
-          RowDefinitions="*,Auto"
-          ColumnDefinitions="*,*">
+    <Grid RowDefinitions="*,Auto" RowSpacing="30" Padding="10">
+        <ScrollView Grid.Row="0" HorizontalOptions="Fill">
+            <Grid RowSpacing="30" RowDefinitions="*,0.5*,*">
 
-        <!-- Placeholder keskelle -->
-        <Frame Grid.Row="0" Grid.ColumnSpan="2"
-               BorderColor="Gray"
-               BackgroundColor="#f5f5f5"
-               Padding="20"
-               CornerRadius="10"
-               HeightRequest="300"
-               WidthRequest="320"
-               HorizontalOptions="Center"
-               VerticalOptions="Center">
-            <Label Text="Tähän tulee VarausClassin kaikki entryt"
-                   FontSize="16"
-                   TextColor="Gray"
-                   HorizontalOptions="Center"
-                   VerticalOptions="Center"/>
-        </Frame>
+                <!-- Palveluiden suodatus -->
+                <StackLayout Spacing="10" Grid.Column="1">
+                    <Grid ColumnDefinitions="*,*" ColumnSpacing="5">
 
-        <!-- Alakulman napit -->
-        <StackLayout Grid.Row="1" Grid.Column="0"
+                        <!-- Asiakashaku -->
+                        <SearchBar x:Name="AsiakasSearchBar" 
+                                    Placeholder="Hae asiakasta..."
+                                    SearchButtonPressed="AsiakasSearchPressed"
+                                    WidthRequest="400"
+                                    HeightRequest="60"/>
+
+                        <!-- Asiakkaan yhteydenotto pickerit -->
+                        <VerticalStackLayout Spacing="7" Grid.Column="1">
+                            <Label Text="Tilauspäivämäärä" HorizontalOptions="Center" FontAttributes="Bold"/>
+                            <DatePicker x:Name="YhteydenottoPvmPicker" WidthRequest="300"/>
+                            <TimePicker x:Name="YhteydenottoAikaPicker" Format="HH:mm" WidthRequest="300"/>
+                        </VerticalStackLayout>
+                    </Grid>
+
+                    <!-- Asiakaslista -->
+                    <CollectionView x:Name="AsiakasLista"
+                                    BackgroundColor="Gray"
+                                    SelectionMode="Single"
+                                    SelectionChanged="AsiakasSelected"
+                                    HeightRequest="200"
+                                    HorizontalOptions="Fill">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <HorizontalStackLayout Spacing="10">
+                                    <Label Text="{Binding Etunimi}" HeightRequest="40" />
+                                    <Label Text="{Binding Sukunimi}" />
+                                    <Label Text="{Binding Email}" />
+                                </HorizontalStackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+
+                    <!-- Välitason suodatuselementit -->
+                    <Grid ColumnDefinitions="0.2*,0.3*,0.3*,0.2*" RowDefinitions="Auto,Auto">
+
+                        <!-- Alue ja henkilömäärä -->
+                        <Picker x:Name="AluePicker" 
+                                Title="Valitse alue"                              
+                                ItemDisplayBinding="{Binding Nimi}"
+                                HeightRequest="70"
+                                WidthRequest="170"/>
+
+                        <Entry x:Name="HenkiloMaaraEntry"
+                               Grid.Row="1"
+                               Placeholder="Valitse henkilömäärä..."
+                               HeightRequest="50"
+                               WidthRequest="170"/>
+
+                        <!-- Varauksen pickerit -->
+                        <VerticalStackLayout Spacing="7" Grid.Row="1" Grid.Column="1" VerticalOptions="Center">
+                            <Label Text="Varaus alkaa" TextColor="Green" HorizontalOptions="Center" FontAttributes="Bold"/>
+                            <DatePicker x:Name="AlkuPvmPicker" WidthRequest="300"/>
+                            <TimePicker x:Name="AlkuAikaPicker" Format="HH:mm" WidthRequest="300"/>
+                        </VerticalStackLayout>
+
+                        <VerticalStackLayout Spacing="7" Grid.Row="1" Grid.Column="2" VerticalOptions="Center">
+                            <Label Text="Varaus loppuu" TextColor="Red" HorizontalOptions="Center" FontAttributes="Bold"/>
+                            <DatePicker x:Name="LoppuPvmPicker" WidthRequest="300"/>
+                            <TimePicker x:Name="LoppuAikaPicker" Format="HH:mm" WidthRequest="300"/>
+                        </VerticalStackLayout>
+
+                        <!-- Mökkien haku button -->
+                        <Button Grid.Row="1" Grid.Column="3"
+                                Text="Hae mökit"
+                                Clicked="MokkiHaku_Clicked"
+                                HeightRequest="60"
+                                WidthRequest="150"/>
+                    </Grid>
+
+                    <!-- Mökkilista -->
+                    <CollectionView x:Name="MokkiLista"             
+                                BackgroundColor="Gray"
+                                SelectionMode="Single" 
+                                SelectionChanged="MokkiSelected"            
+                                HeightRequest="300">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <VerticalStackLayout>
+                                    <Label Text="{Binding MokkiNimi}" FontSize="14" FontAttributes="Bold" HeightRequest="30" HorizontalOptions="Center" />
+                                    <Label Text="{Binding Katuosoite, StringFormat='Osoite: {0}'}" FontSize="14" HorizontalOptions="Center"/>
+                                    <Label Text="{Binding Postinro, StringFormat='Postinumero: {0}'}" FontSize="14" HorizontalOptions="Center"/>
+                                    <Label Text="{Binding HenkiloMaara, StringFormat='Henkilömäärä: {0}'}" FontSize="14" HeightRequest="50" HorizontalOptions="Center"/>
+                                </VerticalStackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </StackLayout>
+
+                <!-- Varauksen tallennus button -->
+                <Button Grid.Row="2" Grid.Column="1"
+                        Text="Lisää varaus"
+                        Clicked="TallennaVaraus_Clicked"
+                        HorizontalOptions="Center"
+                        HeightRequest="45"
+                        WidthRequest="130"
+                        Margin="0,20,0,0"/>
+
+            </Grid>
+        </ScrollView>
+
+        <!-- Vasemman alakulman napit -->
+        <StackLayout Grid.Row="1"
                      Orientation="Horizontal"
                      Spacing="15"
                      HorizontalOptions="Start"
@@ -35,24 +123,12 @@
 
             <Button Text="Etusivu"
                     Clicked="Navigoi_Clicked"
-                    CommandParameter="Etusivu" />
+                    CommandParameter="Etusivu"/>
 
             <Button Text="Takaisin varauksiin"
                     Clicked="Navigoi_Clicked"
-                    CommandParameter="VarausListaPage" />
+                    CommandParameter="VarausListaPage"/>
 
         </StackLayout>
-
-        <!-- Tallenna-nappi oikeaan alakulmaan -->
-        <Button Grid.Row="1" Grid.Column="1"
-                Text="Tallenna"
-                Clicked="Tallenna_Clicked"
-                HorizontalOptions="End"
-                VerticalOptions="End"
-                Margin="0,20,0,0" />
-
-
-
-
     </Grid>
 </ContentPage>
