--- a/HulluKyla/Pages/SeurantaPage.xaml
+++ b/HulluKyla/Pages/SeurantaPage.xaml
@@ -52,7 +52,9 @@
                     </Grid>
 
                     <!-- Laskulista -->
-                    <CollectionView x:Name="LaskuLista" HeightRequest="300">
+                    <CollectionView x:Name="LaskuLista" HeightRequest="300"
+                                    SelectionMode="Single"
+                                    SelectionChanged="LaskuLista_SelectionChanged">
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
                                 <Grid ColumnDefinitions="*,*,*" Padding="5" Margin="0,5">
@@ -78,14 +80,27 @@
                 </VerticalStackLayout>
             </Frame>
 
-            <!-- Etusivu-nappi -->
-            <Button Text="Etusivu"
-                    Clicked="Navigoi_Clicked"
-                    CommandParameter="Etusivu"
-                    HorizontalOptions="Start"
-                    BackgroundColor="LightGray"
-                    CornerRadius="20"
-                    WidthRequest="100"/>
+            <!-- Napit -->
+            <HorizontalStackLayout HorizontalOptions="FillAndExpand" Spacing="10">
+                <!-- Etusivu-nappi -->
+                <Button Text="Etusivu"
+            Clicked="Navigoi_Clicked"
+            CommandParameter="Etusivu"
+            HorizontalOptions="Start"
+            BackgroundColor="LightGray"
+            CornerRadius="20"
+            WidthRequest="100"/>
+
+                <!-- Tulosta-nappi -->
+                <Button Text="Tulosta"
+            Clicked="TulostaLasku_Clicked"
+            x:Name="TulostaButton"
+            BackgroundColor="DarkGray"
+            TextColor="White"
+            CornerRadius="20"
+            WidthRequest="100"
+            HorizontalOptions="End"/>
+            </HorizontalStackLayout>
         </VerticalStackLayout>
     </ScrollView>
 
